Update to the Collections Viewer Component to account for automatic grid layout rather than hard coded CSS rules, as it is a more scalable approach. So each img-wrap styling rule in the css has been removed, and instead put into the Mesh Image Wrapper component and added upon creation. There is still a lingering issue where the images are not fitting the Grid Item and instead overflowing if they are too big (or simply not stretching if they are too small). Not a showstopper, so I think I can go ahead and flesh out the Editor first, as there is a lot of API integration to be done there.

--- a/frontend/src/Components/User/Collections/CollectionsViewer/styles/CollectionsViewer.css
+++ b/frontend/src/Components/User/Collections/CollectionsViewer/styles/CollectionsViewer.css
@@ -1,7 +1,8 @@
 .collections-viewer-main {
     min-height: 100vh;
     width: 100%;
-    padding-bottom: 4rem;
+    padding-block: 4rem;
+    
 }
 
 .viewer-header {
@@ -15,6 +16,7 @@
     font-family: 'Le murmure', sans-serif;
     display: flex;
     flex-direction: column;
+    padding-top: 1.5rem;
     
 }
 
@@ -53,6 +55,7 @@
     grid-column: 1 / span 2;
     max-width: 100%;
     height: 100%;
+    /* object-fit: cover; */
     /* opacity: 0; */
 }
 
@@ -61,7 +64,7 @@
     align-self: end;
   }
 
-.img-wrap-1 {
+/* .img-wrap-1 {
     grid-column: 2 / span 3;
     grid-row: 1;
 }
@@ -93,4 +96,39 @@
 
 .img-wrap-7 {
     grid-column: 2 / span 3;
+} */
+
+/* .collections-grid > .img-wrap:nth-child(7n+1) {
+    grid-column: 2 / span 3;
+    grid-row: auto;
 }
+
+.collections-grid > .img-wrap:nth-child(7n+2) {
+    grid-column: 4 / span 3;
+    grid-row: auto;
+}
+
+.collections-grid > .img-wrap:nth-child(7n+3) {
+    grid-column: 3 / span 3;
+    grid-row: auto;
+}
+
+.collections-grid > .img-wrap:nth-child(7n+4) {
+    grid-column: 1 / span 3;
+    grid-row: auto;
+}
+
+.collections-grid > .img-wrap:nth-child(7n+5) {
+    grid-column: 4 / span 3;
+    grid-row: auto;
+}
+
+.collections-grid > .img-wrap:nth-child(7n+6) {
+    grid-column: 3 / span 3;
+    grid-row: auto;
+}
+
+.collections-grid > .img-wrap:nth-child(7n+7) {
+    grid-column: 2 / span 3;
+    grid-row: auto;
+} */
